# movenue

./: .gitignore  CONTRIBUTION.md  DEVELOPMENT.md  README.md  app.spec  pyproject.toml
.github/workflows/: build_exe.yml
docs/: README.md  music.md  page-settings.md  vlc-settings.md
laoflix/: app.py
laoflix/constants/: ui_colors.py  ui_sizes.py
laoflix/data_structures/: episode.py
laoflix/services/: canvas_helpers.py  card_cache.py  create_xsfp.py  icons.py  image_cache.py  info_cache.py  mp4_metadata.py  settings.py
laoflix/ui_elements/: base_card.py  main_window.py  movie_card.py  movie_list.py  movie_page.py  page.py  popup_window.py  rating_dialog.py  scroll_row.py  search_page.py  series_card.py  series_page.py  youtube_card.py  youtube_page.py
laoflix/ui_elements/music/: music_card.py  (+1 more)
movenue/: app.py
movenue/constants/: general_settings.py  id3_fields.py  mp4_fields.py  nfo_fields.py  ui_sizes.py
movenue/models/: collection.py  playable.py  settings.py  storage.py
movenue/services/: add_infos.py  canvas_helpers.py  card_cache.py  collections_population.py  create_xspf.py  icons.py  id3_metadata.py  image_builder.py  image_cache.py  info_cache.py  metadata.py  mp4_metadata.py  play.py  playables_population.py  playlists.py  population.py  scoring.py  settings.py
movenue/ui/: app.py  main_window.py
movenue/ui_elements/: main_window.py  movie_card.py  movie_list.py  movie_page.py  popup_window.py  rating_dialog.py  scroll_row.py  search_page.py  series_card.py  series_page.py
useful_notebooks/: set_mp3_tags.ipynb  set_mp4_tags.ipynb
(+23 files in other folders)
